--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,9 @@
 {
   "version": 2,
-  "builds": [
-    {
-      "src": "backend/api.js",
-      "use": "@vercel/node"
-    }
-  ],
   "rewrites": [
     { "source": "/login", "destination": "/backend/api.js" },
     { "source": "/logout", "destination": "/backend/api.js" },
     { "source": "/products", "destination": "/backend/api.js" },
-    { "source": "/api/(.*)", "destination": "/backend/api.js" },
-    { "source": "/(.*)", "destination": "/$1" }
+    { "source": "/api/(.*)", "destination": "/backend/api.js" }
   ]
 }
